# librestreaming

./: build.gradle
librestreaming/: CMakeLists.txt  build.gradle
sample/: CMakeLists.txt  build.gradle
